# spec-coding-mcp

./: .gitignore  README.md  pyproject.toml
spec_coding/: __init__.py  compression.py  models.py  server.py  storage.py
tests/: __init__.py  test_storage.py
