[project]
name = "spec-coding-mcp"
version = "0.1.0"
description = "Pure Python MCP server for spec-driven coding with LLMs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
]

[project.scripts]
spec-coding-mcp = "spec_coding.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spec_coding"]